--- a/package.json
+++ b/package.json
@@ -10,34 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^11.6.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-router-dom": "^7.4.1",
-    "recharts": "^2.15.1"
+    "firebase": "^10.7.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
+    "react-redux": "^9.0.0",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@headlessui/react": "^2.2.0",
-    "@heroicons/react": "^2.2.0",
-    "@reduxjs/toolkit": "^2.6.1",
-    "@tailwindcss/forms": "^0.5.10",
-    "@types/node": "^22.13.14",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.1.1",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "@types/recharts": "^1.8.29",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.17",
-    "date-fns": "^4.1.0",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "postcss": "^8.4.35",
-    "react-redux": "^9.2.0",
-    "tailwindcss": "^3.4.1",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.16",
+    "date-fns": "^3.3.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10"
   }
 }
