--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@emoji-mart/react": "^1.1.1",
     "@types/uuid": "^10.0.0",
     "emoji-mart": "^5.6.0",
-    "firebase": "^10.7.0",
+    "firebase": "^10.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.0",
@@ -30,6 +30,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
